// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-FEMpB sc-fLDLck cRvibt eWGIFq"
    >
      a
    </span>
    <span
      class="sc-FEMpB cRvibt"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-FEMpB sc-gjcoXW cRvibt bdPGgx"
    >
      a
    </span>
    <span
      class="sc-FEMpB sc-dVBluf cRvibt bNzGEa"
    >
      b
    </span>
  </section>
</div>
`;
